@@ -1,3 +1,11 @@
+2017-06-24  Marek Polacek  <polacek@redhat.com>
+
+	Backported from mainline
+	2017-04-18  Marek Polacek  <polacek@redhat.com>
+
+	PR c++/80241 - ICE with alignas pack expansion.
+	* g++.dg/cpp0x/alignas11.C: New test.
+
 2017-06-23  Thomas Preud'homme  <thomas.preudhomme@arm.com>
 
 	Backport from mainline
